ongoing: event_create

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class='events-header' style='background-image: url(<%= header_background_image_url %>)'>
+<div class='events-header' style='background-size:100%; background-image: url("http://www.thatdrop.com/wp-content/uploads/2015/10/dimitri-vegas-like-mike2.jpg")'>
   <div class="container">
     <h2> Discover upcoming events </h2>
     <form>
