--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,12 +7,12 @@
   </div>
 </div>
 <div class="container-fluid events-list">
-    <% @events.in_groups_of(3) do |g| %>
+    <% @events.upcoming.in_groups_of(2) do |g| %>
       <div class="row">
         <% g.compact.each do |e| %>
             <%= render partial: 'card', locals: {event: e} %>
         <% end %>
-      </div>  
+      </div>
     <% end %>
   </div>
 </div>
