--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="col-md-9 event-content">
-          <div class="hero-img hidden-sm-down" style="background-image: url(<%= @event.hero_image_url %>); background-size: cover;"></div>
+          <div class="hero-img" style="background-image: url(<%= @event.hero_image_url %>); background-size: cover;"></div>
           <div class="container">
             <h3> <%= @event.name %> </h3>
             <div class="pull-left">
